[tool.poetry]
name = "voice-score"
version = "0.1.0"
description = "A tool you can use to check whether content complies with OpenAI's usage policies for your voice"
authors = ["thangnc <thang.nguyencao@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
langchain = "^0.0.79"
cohere = "^3.2.1"
faiss-cpu = "^1.7.3"
openai = "^0.27.0"
pillow = "^9.4.0"
tenacity = "^8.2.0"
PyYAML = "^6.0"
setuptools-rust = "^1.6.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
pytest = "^7.2.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = { version = "^23.1a1", allow-prereleases = true }
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
